Infrastructure-cloud-EKS/infra-aplicacion/K8s/manfiestos/namespace.yaml
# Crear namespace
apiVersion: v1
kind: Namespace
metadata:
  name: robot-shop
  labels:
    istio-injection: enabled
