Infrastructure-cloud-EKS/infra-aplicacion/K8s/manfiestos/dispatch-deployment.yaml
# Dispatch Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dispatch
  namespace: robot-shop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dispatch
  template:
    metadata:
      labels:
        app: dispatch
    spec:
      # Configuración para ejecutar en nodos de aplicación
      nodeSelector:
        node-type: application
        workload-type: business
      containers:
      - name: dispatch
        image: andherson1039/rs-dispatch:1282af465e78db13b40c68a2ef0087926bded81a
        ports:
        - containerPort: 8080
       # livenessProbe:
       #   exec:
       #     command:
       #     - pgrep
       #     - "dispatch"
       #   initialDelaySeconds: 60
       #   periodSeconds: 30
       #   timeoutSeconds: 10
       #   failureThreshold: 6
       # readinessProbe:
       #   exec:
       #     command:
       #     - /bin/sh
       #     - -c
       #     - 'nc -z localhost 8080'
       #   initialDelaySeconds: 40
       #   periodSeconds: 20
       #   timeoutSeconds: 5
       #   failureThreshold: 4
        resources:
          requests:
            cpu: "50m"
            memory: "64Mi"
          limits:
            cpu: "100m"
            memory: "128Mi"
