Infrastructure-cloud-EKS/infra-aplicacion/K8s/manfiestos/mongodb-statefulset.yaml
# StatefulSet MongoDB
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb
  namespace: robot-shop
  labels:
    app: mongodb
spec:
  serviceName: mongodb-headless
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      # Configuración para ejecutar en nodos de aplicación
      nodeSelector:
        node-type: application
        workload-type: business
      containers:
      - name: mongodb
        image: andherson1039/rs-mongodb
        ports:
        - containerPort: 27017
        livenessProbe:
         tcpSocket:
           port: 27017
         initialDelaySeconds: 30
         periodSeconds: 10
         timeoutSeconds: 5
         failureThreshold: 3
        readinessProbe:
         tcpSocket:
           port: 27017
         initialDelaySeconds: 10
         periodSeconds: 10
#        resources:
#          requests:
#            cpu: "200m"
#            memory: "512Mi"
#          limits:
#            cpu: "400m"
#            memory: "1Gi"
        volumeMounts:
        - name: mongodb-data
          mountPath: /data/db
  volumeClaimTemplates:
  - metadata:
      name: mongodb-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: gp3-default
      resources:
        requests:
          storage: 1Gi
