Infrastructure-cloud-EKS/infra-aplicacion/K8s/manfiestos/payment-deployment.yaml
# Payment Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment
  namespace: robot-shop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment
  template:
    metadata:
      labels:
        app: payment
    spec:
      # Configuración para ejecutar en nodos de aplicación
      nodeSelector:
        node-type: application
        workload-type: business
      containers:
      - name: payment
        image: andherson1039/rs-payment:136c8e91f65972ef25c47e172736ae11b5714cb7
        ports:
        - containerPort: 8080
        livenessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 60
          periodSeconds: 10
          timeoutSeconds: 3
          failureThreshold: 3
        readinessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 5
          timeoutSeconds: 2
          failureThreshold: 2
        resources:
          requests:
            cpu: "50m"
            memory: "128Mi"
          limits:
            cpu: "100m"
            memory: "256Mi"
