Infrastructure-cloud-EKS/infra-aplicacion/K8s/manfiestos/ratings-deployment.yaml
# Ratings Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
 name: ratings
 namespace: robot-shop
spec:
 replicas: 1
 selector:
   matchLabels:
     app: ratings
 template:
   metadata:
     labels:
       app: ratings
   spec:
     # Configuración para ejecutar en nodos de aplicación
     nodeSelector:
       node-type: application
       workload-type: business
     containers:
     - name: ratings
       image: andherson1039/rs-ratings:2c8d3177aaf2493d07a0c93a498adebae47785bd
       ports:
       - containerPort: 80
       livenessProbe:
         tcpSocket:
           port: 80
         initialDelaySeconds: 60
         periodSeconds: 20
         timeoutSeconds: 5
         failureThreshold: 5
       readinessProbe:
         tcpSocket:
           port: 80
         initialDelaySeconds: 30
         periodSeconds: 10
         timeoutSeconds: 3
         failureThreshold: 3
       resources:
         requests:
           cpu: "50m"
           memory: "64Mi"
         limits:
           cpu: "100m"
           memory: "128Mi"
