Infrastructure-cloud-EKS/infra-aplicacion/K8s/manfiestos/shipping-deployment.yaml
# Shipping Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shipping
  namespace: robot-shop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shipping
  template:
    metadata:
      labels:
        app: shipping
    spec:
      # Configuración para ejecutar en nodos de aplicación
      nodeSelector:
        node-type: application
        workload-type: business
      containers:
      - name: shipping
        image: andherson1039/rs-shipping
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 60
          periodSeconds: 10
          timeoutSeconds: 3
          failureThreshold: 3
        readinessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 60
          periodSeconds: 5
          timeoutSeconds: 2
          failureThreshold: 2
        resources:
          requests:
            cpu: "400m"
            memory: "600Mi"
          limits:
            cpu: "600m"
            memory: "1Gi"
