Infrastructure-cloud-EKS/infra-aplicacion/K8s/manfiestos/user-deployment.yaml
# User Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user
  namespace: robot-shop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user
  template:
    metadata:
      labels:
        app: user
    spec:
      # Configuración para ejecutar en nodos de aplicación
      nodeSelector:
        node-type: application
        workload-type: business
      containers:
      - name: user
        image: andherson1039/rs-user
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 3
          failureThreshold: 3
        readinessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 5
          timeoutSeconds: 2
          failureThreshold: 2
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "150m"
            memory: "240Mi"
