Infrastructure-cloud-EKS/infra-aplicacion/K8s/manfiestos/web-deployment.yaml
# Web Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: robot-shop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      # Configuración para ejecutar en nodos de aplicación
      nodeSelector:
        node-type: application
        workload-type: business
      containers:
      - name: web
        image: andherson1039/rs-web:9ef641c33976a118ff4221c8f74e7dc80e32219e
        ports:
        - containerPort: 8080
        livenessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 3
          failureThreshold: 3
        readinessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 5
          timeoutSeconds: 2
          failureThreshold: 2
        resources:
          requests:
            cpu: "50m"
            memory: "64Mi"
          limits:
            cpu: "100m"
            memory: "128Mi"
