Infrastructure-cloud-EKS/infra-aplicacion/K8s/manfiestos/user-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user
  namespace: robot-shop
spec:
  selector:
    app: user
  ports:
  - port: 8080
    targetPort: 8080
  type: ClusterIP
